fixed an issue where the ripple effect would be cut off at the bottom

--- a/styles/main.css
+++ b/styles/main.css
@@ -195,15 +195,16 @@ main {
   right: 0px;
   bottom: 0px;
   overflow: hidden;
-  min-height: 45vw; /* Use min-height for flexibility */
+  min-height: 95vh; /* Use min-height for flexibility */
   padding: 20px; /* Add padding for visual spacing */
   z-index: 4;
 }
 .raindrop-background {
   position: absolute;
-  min-height: 80vh;
+  background-color: #551556;
+  min-height: 100vh;
   width: 100vw;
-  top: 10;
+  top: 10vh;
   left: 0;
   overflow: hidden;
   z-index: 1;
@@ -949,6 +950,13 @@ main {
     scale: 100%;
     padding-top: 100px;
   }
+  .raindrop-background {
+    min-height: 85vh;
+    top: 5vh;
+  }
+  .about-section {
+    min-height: 70vh;
+  }
   .l1-c1-l1 span {
     position: absolute;
     right: calc(1% + 1vw);
@@ -974,6 +982,10 @@ main {
 
 /* tablets */
 @media (max-width: 760px) {
+  .raindrop-background {
+    min-height: 78vh;
+    top: 1vh;
+  }
   .line-1 {
     display: flex;
     flex-direction: column;
@@ -1037,6 +1049,9 @@ main {
     padding: 0;
     font-size: calc(1rem);
   }
+  .raindrop-background {
+    min-height: 90vh;
+  }
   .line-3 {
     margin-left: 20vw;
   }
@@ -1051,6 +1066,9 @@ main {
   .header-nav-li {
     padding: 10px 0 10px 0;
     font-size: x-small;
+  }
+  .raindrop-background {
+    min-height: 110vh;
   }
   .about-section img {
     height: 80px;
